# studio-sound

./: .gitattributes  .gitignore  .golangci.yml  .prettierignore  Makefile  README.md  package-lock.json  package.json  verify-running.sh
.github/workflows/: ci.yml
app/: eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json
app/src/: App.test.tsx  App.tsx  main.tsx  styles.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  lib.rs  logging.rs  main.rs
app/src-tauri/src/ipc/: client.rs  envelope.rs  error.rs  generated.rs  mod.rs  supervisor.rs
app/src/components/: ActiveFileCard.test.tsx  ActiveFileCard.tsx  Diagnostics.tsx  (+13 more)
docs/: implementation_plan.md  ipc-contract.md  troubleshooting.md
docs/adr/: 2026-05-14-ipc-contract.md  2026-05-16-ffprobe-bundling.md
docs/lld/: 2026-05-11-phase-0-bootstrap.md  2026-05-16-phase-3-ffmpeg-media-probe.md
docs/plans/: 2026-05-16-phase-3-ffmpeg-media-probe.md
docs/reqs/: phase_0.md  phase_3_ffmpeg_media_probe_prd_and_ui_design.md
docs/research/: 2026-05-16-phase-3-ffmpeg-media-probe.md
schemas/: envelope.schema.json  media.probe.schema.json  system.echo.schema.json  system.ping.schema.json  system.shutdown.schema.json
scripts/: build-sidecar.mjs  check-prereqs.mjs  fetch-ffprobe.mjs  gen-schemas.mjs  update-ffprobe-lock.mjs  verify-codegen.mjs
scripts/lib/: ffprobe-archive.mjs
sidecar/: go.mod  go.sum
test-assets/: README.md  tiny-h264-aac-multitrack.mov  tiny-vp9-opus.webm
(+64 files in other folders)
