[package]
name = "studio-sound-app"
version = "0.0.1"
description = "Studio Sound App"
authors = ["Studio Sound"]
edition = "2021"
default-run = "studio-sound-app"

[lib]
name = "studio_sound_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio = { version = "1", features = ["sync", "io-util", "macros", "rt-multi-thread", "process", "time"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
regress = "0.10"
ulid = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
